--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -16,3 +16,13 @@
         @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
     }
 }
+
+.text-outline {
+    -webkit-text-stroke: 1px #ffffff;
+    text-shadow: 2px 2px 0 #000000;
+}
+
+text-outline.hover {
+    -webkit-text-stroke: 1px #3a05da;
+    text-shadow: 2px 2px 0 #ffffff;
+}
